Use travis_wait

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,6 @@ branches:
     - master
 notifications:
   webhooks: http://build.servo.org:54856/travis
+script:
+  - travis_wait cargo build --verbose
+  - travis_wait cargo test --verbose
